03-gitops/apps/01-platform/oidc-issuer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-issuer
  namespace: oidc-issuer
spec:
  type: ClusterIP
  selector:
    app: nginx-issuer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
