03-gitops/apps/01-platform/oidc-issuer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-issuer
  namespace: oidc-issuer
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-issuer.serhii.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-issuer
                port:
                  number: 80
