03-gitops/apps/01-platform/oidc-issuer/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-oidc-issuer
  namespace: oidc-issuer
spec:
  endpointSelector: {}  # або matchLabels: { app: nginx-issuer }
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app.kubernetes.io/name: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
